--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,13 @@ section{
 
 
 /* **************loader************* */
-
+.loader{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    background-color: white;
+}
 .loading {
     width: 60px;
     height: 60px;
