--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,44 @@ html{
     height: 100vh;
 }
 
+.text-forest{
+    color: #3D473B;
+}
+
 section{
     scroll-snap-align: start;
 }
-
 #hero{
+    position: relative;
+    overflow: hidden;
+    height: calc(100vh - 80px);
+}
+.hero-background{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover!important;
+}
+#hero .veil{
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(25,23,23,.5);
+}
+
+.down-arrow{
+    position:absolute;
+    bottom: 20px;
+    left:50%;
+    border-radius: 50px;
+
+}
+#about-us>.container:nth-child(1){
     background-image: url("../assets/img/back1.jpg");
     background-position: center center;
     background-size: cover;
@@ -37,11 +70,11 @@ section{
 }
 
 #presentation .d-img{
-    height: 200px;
     background-image: url("../assets/img/back2.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    height: 150px;
 }
 
 #five{
@@ -67,7 +100,7 @@ section{
 
 /* **************loader************* */
 .loader{
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     z-index: 100;
@@ -189,3 +222,4 @@ section{
         transform: scale(1);
     }
 }
+
